# zion

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  config.example.yaml  index.html  pyproject.toml  requirements.txt
.github/workflows/: static.yml
examples/: advanced.py  basic.py  run_zion_audit.py
src/: __main__.py  core.py  health.py  llm.py  utils.py
src/zion/: __init__.py  cli.py  models.py  report.py
src/zion/adversarial/: __init__.py  deception.py  hidden_goals.py  red_team.py
src/zion/boundary/: __init__.py  complexity.py  mapper.py  oversight.py
src/zion/protocols/: __init__.py  behavioral_hash.py  commitment.py  handoff.py  verification.py
tests/: test_benchmark.py  test_boundary.py  test_core.py  test_integration.py  test_protocols.py  test_utils.py
